--- a/index_template.html
+++ b/index_template.html
@@ -15,12 +15,12 @@
 <!--Top Bar-->
 <header class="navBar">
     <div class="navBarLogo">
-        <img alt="" src=""><b>Logo</b>
+        <img alt="" src=""><b>{Logo}</b>
     </div>
-    <ul><li><a href="">Menu1</a></li></ul>
+    <ul><li><a href="">{Menu1}</a></li></ul>
     <ul class="rightMenu">
-        <li class="floatRight"><a href="">Menu2</a></li>
-        <li class="floatRight"><a href="">Menu3</a></li>
+        <li class="floatRight"><a href="">{Menu2}</a></li>
+        <li class="floatRight"><a href="">{Menu3}</a></li>
     </ul>
 </header>
 
