--- a/index_template.html
+++ b/index_template.html
@@ -4,10 +4,10 @@
 <HEAD>
     <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN""http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
     <title>index_template</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/navBar.css">
-    <link rel="stylesheet" href="css/container.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="templates/css/main.css">
+    <link rel="stylesheet" href="templates/css/navBar.css">
+    <link rel="stylesheet" href="templates/css/container.css">
+    <link rel="stylesheet" href="templates/css/footer.css">
 </HEAD>
 
 <body>
