--- a/register_template.html
+++ b/register_template.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/navBar.css">
-    <link rel="stylesheet" href="css/container.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="templates/css/main.css">
+    <link rel="stylesheet" href="templates/css/navBar.css">
+    <link rel="stylesheet" href="templates/css/container.css">
+    <link rel="stylesheet" href="templates/css/footer.css">
 </head>
 <body>
 
